# dice-value-recognition

./: README.md  requirements.txt  setup.cfg
ai_src/models/research/: setup.py
ai_src/models/research/object_detection/: detect_from_image.py  generate_tfrecord.py  test.py  test.record
ai_src/models/research/object_detection/images/: test_labels.csv  train_labels.csv
ai_src/models/research/object_detection/images/test/: 20211121_171240.xml  20211121_171949.xml  20211121_172248.xml  20211121_172411.xml  20211121_173146.xml  20211121_173311.xml  20211121_173731.xml  20211121_173935.xml  20211121_174252.xml  20211121_174308.xml  20211121_174421.xml  20211121_174743.xml  20211121_174947.xml  20211121_175101.xml  20211121_175202.xml  20211121_175234.xml  20211121_175612.xml  20211121_175905.xml  20211121_180004.xml  20211121_180216.xml  20211121_180359.xml  20211121_180537.xml  20211121_180713.xml  20211121_180833.xml
ai_src/models/research/object_detection/images/train/: 20211121_171311.xml  20211121_171337.xml  20211121_171357.xml  20211121_171419.xml  20211121_171450.xml  (+247 more)
ai_src/models/research/object_detection/training/: checkpoint  ckpt-1.index  ckpt-2.index  ckpt-3.index  labelmap.pbtxt  ssd_efficientdet_d1_640x640_coco17_tpu-8.config
ai_src/models/research/object_detection/utils/: config_util.py  label_map_util.py
dvr/: __init__.py
dvr/methods/: __init__.py  segmentation.py
dvr/scripts/: detect.py  frame.py
segmentation_src/: MANIFEST.in  README.md
segmentation_src/dvr/: __init__.py
segmentation_src/dvr/methods/: __init__.py  segmentation.py
