[metadata]
name = dvr
version = attr: dvr.__version__
description = Dice value recognition program.
author = attr: dvr.__authors__
author_email = jakub.blazejowski@student.put.poznan.pl
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.8
packages = find:
include_package_data = True
zip_safe = False
install_requires =
    click
    scikit-image
    matplotlib
    numpy
    scipy

[options.entry_points]
console_scripts =
    frame = dvr.scripts.frame:main
